fix viewport issue on mobile

--- a/_sass/includes/medium.scss
+++ b/_sass/includes/medium.scss
@@ -6,8 +6,8 @@
   }
 
   body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 30px;
     word-wrap: break-word;
   }
