--- a/_sass/includes/small.scss
+++ b/_sass/includes/small.scss
@@ -7,8 +7,8 @@
   }
 
   body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     
     h1 { font-size: 1.75rem; }
     h2 { font-size: 1.5rem; }
